--- a/www/style.css
+++ b/www/style.css
@@ -25,7 +25,7 @@ h1 {
 	font-size: 5rem;
 	margin: 0;
 	letter-spacing: 2px;
-	text-transform: lowercase;
+	text-transform: uppercase;
 }
 
 h2 {
@@ -51,14 +51,14 @@ nav {
 }
 
 .nav-links a {
-	color: #808080;
+	color: #fcba03;
 	text-decoration: none;
 	font-size: 1.2rem;
 	transition: color 0.3s;
 }
 
 .nav-links a:hover {
-	color: #fcba03;
+	color: #9803fc;
 }
 
 .upload-form {
