--- a/www/style.css
+++ b/www/style.css
@@ -54,7 +54,7 @@ nav {
 	color: #fcba03;
 	text-decoration: none;
 	font-size: 1.2rem;
-	transition: color 0.3s;
+	transition: color .3s;
 }
 
 .nav-links a:hover {
