--- a/www/style.css
+++ b/www/style.css
@@ -1,13 +1,13 @@
 body {
 	margin: 0;
 	padding: 0;
-	height: 100vh;
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	background-color: #1a1a1a;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+	padding: 2rem 0;
 }
 
 .container {
@@ -17,7 +17,8 @@ body {
 	border-radius: 15px;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 	width: 45%;
-	max-width: 1000;
+	max-width: 1000px;
+	margin: auto;
 }
 
 h1 {
